pluginTester/styles/appStyle.css
/* ... */
nav.menu.layout5 a.item-link .media{
	float:left;
}
nav.menu.layout5 a.divider{
	background:none !important;
	padding:0 10px;
	margin-top:13px;
	font-weight:500;
}
nav.menu.layout5 a.divider p{
	font-size:14px;
}
nav.menu.layout5 a.divider + a,
nav.menu.layout5 .clearfix a.item-link:first-child{
	padding-top:1px;
}
nav.menu.layout5 a.notifications,
nav.menu.layout5 a.adminMode,
nav.menu.layout5 .clearfix a.item-link{
	padding-left:25px !important;
}

nav.menu.layout6{
	background:rgba(255,255,255,0.94) !important;
}
nav.menu.layout6 a .media.avatar,
nav.menu.layout6 a .media{
	height:inherit;
	width:100%;
	margin:0 0 4px 0;
	vertical-align:top;
}
nav.menu.layout6 a.username .media img{
	max-height:inherit;
	max-width:57px;
}
nav.menu.layout6 a .media.avatar img{
	border:2px solid #fff;
}
nav.menu.layout6 #sideMenuCloseButton,
nav.menu.layout6 a,
nav.menu.layout6 p{
	color:#5f5f5f !important;
}
nav.menu.layout6 a p{
	display:block;
	width:100%;
	text-align:center;
}
nav.menu.layout6 a p.user-name{
	font-size:13px;
}
nav.menu.layout6 a{
	padding:8px;
}
nav.menu.layout6 a.login{
	padding:14px 8px;
}
nav.menu.layout6 a.logout{
	padding-top:0 !important;
}
nav.menu.layout6 a{
	padding:7px 10px;
}
nav.menu.layout6 a.notifications p{
	padding-right:0;
}
nav.menu.layout6 a.notifications .media,
nav.menu.layout6 a.adminMode .media,
nav.menu.layout6 a.item-link .media{
	display:none;
}
nav.menu.layout6 a.divider{
	background:none !important;
	padding:0 10px;
	margin-top:13px;
	font-weight:500;
}
nav.menu.layout6 a.divider p{
	font-size:16px;
}
nav.menu.layout6 a.divider + a,
nav.menu.layout6 .clearfix a.item-link:first-child{
	padding-top:1px;
}

nav.menu.layout7{
	width:200px;
	right:-200px;
}
nav.menu.active.layout7{
	transform:translateX(-200px);
}
nav.menu.layout7 a .media.avatar,
nav.menu.layout7 a .media{
	height:inherit;
	width:100%;
	margin:0 0 4px 0;
	vertical-align:top;
}
nav.menu.layout7 a.item-link .media{
	height:auto;
	margin:14px 0;
}
nav.menu.layout7 a.username .media img{
	max-height:inherit;
	max-width:57px;
}
nav.menu.layout7 a .media.avatar img{
	border:2px solid #fff;
}
nav.menu.layout7 a p{
	display:block;
	width:100%;
	text-align:center;
	font-size:12px;
	line-height:15px;
}
nav.menu.layout7 a.item-link p{
	position:absolute;
	bottom:16px;
	left:0;
	padding:0 5px;
	width:100%;
}
nav.menu.layout7 a p.user-name{
	font-size:13px;
}
nav.menu.layout7 a{
	padding:8px;
}
nav.menu.layout7 a.login{
	padding:16px 8px;
}
nav.menu.layout7 a.logout{
	padding-top:0 !important;
}
nav.menu.layout7 a.divider{
	padding-top:1px;
	padding-bottom:2px;
}
nav.menu.layout7 a.divider p{
	margin-bottom:3px;
}
nav.menu.layout7 a.item-link .media .main-icon{
	font-size:30px;
	padding:1px 0;
	display:inline-block;
}
nav.menu.layout7.circle-media a.item-link .media .main-icon{
	font-size:28px;
	padding:2px 0;
}
nav.menu.layout7 a.item-link .media img{
	max-width:32px;
	max-height:32px;
	margin-top:0px;
}
nav.menu.layout7 a.item-link{
	width:50%;
	float:left;
	height:100px;
	position:relative;
}
nav.menu.layout7 a.item-link:after{
	content:'';
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	display:inline-block;
	opacity:0.5;
	border-top:1px solid #ccc;
}
nav.menu.layout7 a.item-link:first-child:after,
nav.menu.layout7 a.item-link:nth-child(2):after{
	border-top:none;
}
nav.menu.layout7 a.item-link:nth-child(2n):after{
	border-left:1px solid #ccc;
}
nav.menu.layout7 a.notifications .media{
	width:auto;
	margin-right:12px;
	height:22px;
	width:22px;
	line-height:20px;
	text-align:center;
	display:inline-block;
}
nav.menu.layout7 a.notifications .media .main-icon{
	font-size:18px;
	vertical-align:middle;
}
nav.menu.layout7 a.notifications p,
nav.menu.layout7 a.adminMode p{
	width:auto;
	max-width:100%;
	text-align:center;
}
nav.menu.layout7 a.notifications span.icon{
	display:none;
}


/* WYSIWYG Content */
.widget-content{
	word-wrap:break-word;
}

/* Slider */
.plugin-slider,
.plugin-slide,
.contact-maps,
.user-profile .plugin-banner{
	max-height:380px;
	position:relative;
}
.plugin-slide.show-map{
	height:320px;
}
.plugin-slide img,
.contact-maps img{
	max-height:380px;
	width:auto !important;
	margin:0 auto;
}
.no-background .plugin-slide{
	background:none;
}

/* Dynamic Links */
.dynamic-links a,
.dynamic-links p{
	display:block;
	width:100%;
	position:relative;
	padding:10px 0;
	margin:0;
}
.dynamic-links a:before,
.dynamic-links p:before{
	content:'';
	border-top:1px solid #ddd !important;
	opacity:0.25;
	top:0;
	left:0;
	position:absolute;
	width:100%;
}
/*.modal-dialog .dynamic-links a:before,
.modal-dialog .dynamic-links p:before{
	opacity:1;
}*/
.dynamic-links p:hover{
	cursor:pointer;
}
.dynamic-links a img,
.dynamic-links p img{
	width:17px;
	height:auto;
	position:relative;
	top:1px;
	border-radius:2px;
}
.dynamic-links a .icon,
.dynamic-links p .icon{
	font-size:17px;
	margin-right:5px;
	position:relative;
	top:3px;
}

/* Push Notifications */
.push-notifications .push-item{
	display:block;
}
.push-notifications .push-item .ellipsis-two{
	max-height:45px;
	overflow:hidden;
}
.push-notifications .push-item .indicator{
	display:inline-block;
	width:12px;
	height:12px;
	border-radius:100%;
	display:none;
}
.push-notifications .push-item .indicator.active{
	display:inline-block;
}

/* User Profile */
.user-profile .edit-profile{
	position:absolute;
	left:0;
	width:100%;
}
.user-profile .edit-profile.done-editing{
	bottom:-27px;
}
.user-profile .edit-profile .inner,
.user-profile .edit-profile .cancel-link{
	max-width:677px;
	padding:10px;
	width:100%;
	margin:0 auto;
}
.user-profile .edit-profile .cancel-link{
	padding:5px 15px 0 0;
}
.user-profile .user-info{
	max-width:677px;
	margin:0 auto;
	padding:0 15px;
	width:100%;
	position:relative;
}
.user-profile .user-info .user-avatar{
	position:absolute;
	top:-60px;
	border-radius:100%;
	border:2px solid #fff;
	overflow:hidden;
	width:120px;
	height:120px;
	background:#32373a;
}
/* ... */

